// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fallbacks for state.chat, state.scenario, state.cohort (missing) 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui padded grid l__waiting not-modal\\"
    >
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <p>
            There are no participants in the scenario yet.
          </p>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        />
      </div>
    </div>
  </div>
</body>"
`;

exports[`Fallbacks for state.chat, state.scenario, state.cohort (unloaded) 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui padded grid l__waiting not-modal\\"
    >
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <p>
            There are no participants in the scenario yet.
          </p>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        />
      </div>
    </div>
  </div>
</body>"
`;

exports[`Render 1 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui padded grid l__waiting not-modal\\"
    >
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <p>
            There are no participants in the scenario yet.
          </p>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        />
      </div>
    </div>
  </div>
</body>"
`;

exports[`Render 2 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui padded grid l__waiting not-modal\\"
    >
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <p>
            There are no participants in the scenario yet.
          </p>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        />
      </div>
    </div>
  </div>
</body>"
`;

exports[`With cohort Has users that are assigned personas 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui padded grid l__waiting not-modal\\"
    >
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <p>
            There are no participants in the scenario yet.
          </p>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        />
      </div>
    </div>
  </div>
</body>"
`;

exports[`With cohort Has users that are no longer present 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui padded grid l__waiting not-modal\\"
    >
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <p>
            There are no participants in the scenario yet.
          </p>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        />
      </div>
    </div>
  </div>
</body>"
`;

exports[`Without cohort Has users that are assigned personas 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui padded grid l__waiting not-modal\\"
    >
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <p>
            There are no participants in the scenario yet.
          </p>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        />
      </div>
    </div>
  </div>
</body>"
`;

exports[`Without cohort Has users that are no longer present 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"ui padded grid l__waiting not-modal\\"
    >
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <p>
            There are no participants in the scenario yet.
          </p>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <p>
            Who has left the scenario?
          </p>
        </div>
      </div>
      <div
        class=\\"row\\"
      >
        <div
          class=\\"column\\"
        >
          <div
            class=\\"ui fluid card\\"
          >
            <div
              class=\\"content\\"
            >
              <div
                class=\\"ui divided selection list\\"
                data-testid=\\"lobby-user-absent-invitees\\"
                role=\\"list\\"
              >
                <div
                  class=\\"item\\"
                  role=\\"listitem\\"
                >
                  <div
                    class=\\"content\\"
                  >
                    <span
                      aria-label=\\"Facilitator User (facilitator)\\"
                      class=\\"ui medium text\\"
                      title=\\"Facilitator User (facilitator)\\"
                    >
                      Facilitator User
                    </span>
                     
                    <i
                      aria-hidden=\\"true\\"
                      class=\\"small icon chalkboard teacher\\"
                      style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                      title=\\"Facilitator\\"
                    />
                     
                  </div>
                </div>
                <div
                  class=\\"item\\"
                  role=\\"listitem\\"
                >
                  <div
                    class=\\"content\\"
                  >
                    <span
                      aria-label=\\"Researcher User (researcher)\\"
                      class=\\"ui medium text\\"
                      title=\\"Researcher User (researcher)\\"
                    >
                      Researcher User
                    </span>
                     
                    <i
                      aria-hidden=\\"true\\"
                      class=\\"small icon user graduate\\"
                      style=\\"margin-right: 0px; margin-bottom: 0.3em; margin-left: 0.25em; opacity: 0.25;\\"
                      title=\\"Researcher\\"
                    />
                     
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>"
`;
